<resources>
    <string name="app_name">SetMaster</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="profile_status_active">Активен</string>
    <string name="profile_status_inactive">Неактивен</string>
    <string name="save">СОХРАНИТЬ</string>
    <string name="edit_profile_name_outer_hint">Название профиля</string>
    <string name="edit_profile_name_hint">Профиль</string>
    <string name="setting_name_media_volume">Громкость медиа</string>
    <string name="setting_name_ring">Громкость звонка</string>
    <string name="add_setting">Добавить настройку</string>
    <string name="delete">Удалить</string>
    <string name="add_condition_set">Содать набор условий</string>
    <string name="add_condition">Добавить условие</string>
    <string name="condition_name_time">Время / день недели</string>
    <string name="condition_name_wifi">Подключение к Wi-Fi</string>
    <string name="condition_status_active">Активно</string>
    <string name="monday">пн</string>
    <string name="tuesday">вт</string>
    <string name="wednesday">ср</string>
    <string name="thursday">чт</string>
    <string name="friday">пт</string>
    <string name="saturday">сб</string>
    <string name="sunday">вс</string>
    <string name="time_condition_from">от</string>
    <string name="time_condition_days">Дни недели</string>
    <string name="time_condition_to">до</string>
    <string name="profiles">Профили</string>
</resources>
